--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-chirpy
 title: Welcome to my Hacking/CTF Guide
 description: There are many guides out there.  Many of them are fantastic.  This is my guide.  These are the bits and pieces I have picked up along the way which help me in my methodology as I work through boot-to-root CTF-style challenges.
